<resources>
    <string name="app_name">CarRacer</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_race">Race</string>
    <string name="title_account">Account</string>
    <string name="Sing_in">Nie masz konta? Zarejestruj się</string>
    <string name="log_in">Zaloguj się</string>
    <string name="password">Hasło</string>
    <string name="login">Login</string>
    <string name="username">Login</string>
    <string name="password_register">Hasło</string>
    <string name="register_btn">Zarejestruj się</string>
    <string name="log_in_register">Posiadasz już konto? Zaloguj się</string>
    <string name="wyloguj_si">Wyloguj się</string>
</resources>